--- a/top-menu.html
+++ b/top-menu.html
@@ -1,32 +1,3 @@
-<style>
-    <!-- durée de l animation sauf les panel-toggle pour ne pas les ecraser-->
-    *:not('#panel'){
-        transition: all ease 0.3s;
-        font-size: 11pt;
-    }
-
-    .sidenav {
-        min-height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        box-shadow: 2px 4px 9px var(--gray-dark);
-        background-color: var(--gray-3);
-        overflow-x: hidden;
-        transition: 0.5s;
-        /*padding: 11pt;*/
-    }
-.larg-icon{
-    height: 59pt;
-    padding: 13pt;
-    width: 83pt;
-    margin: auto;
-}
-
-
-</style>
 <!-- MENU SIDEBAR ->  mode tablete -->
 <div id="mySidenav" class="sidenav  hidden-lg tablete-mode">
 
@@ -92,9 +63,12 @@
 <div id="titre" class="navbar-toggler">
     
 </div>
-  <div class="navbar-toggler hidden-lg-up">
+  <div class="navbar-toggler hidden-lg-up xs-hid">
 	Modifier
 </div>
+    <div class="hidden-lg sm-hid">
+        <i class="fa fa-search search"></i>
+    </div>
 
  
 
