modal new actu edit

--- a/modal.nouvelleRequette.html
+++ b/modal.nouvelleRequette.html
@@ -30,13 +30,49 @@
                             <li class="panel-item">
                                 <div class="custom-control custom-radio">
                                     <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" checked="">
-                                    <label class="custom-control-label" for="customRadio1">Toggle this custom radio</label>
+                                    <label class="custom-control-label" for="customRadio1">Date</label>
                                 </div>
                             </li>
                             <li class="panel-item">
                                 <div class="custom-control custom-radio">
                                     <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input" checked="">
-                                    <label class="custom-control-label" for="customRadio2">Toggle this custom radio</label>
+                                    <label class="custom-control-label" for="customRadio2">Heure</label>
+                                </div>
+                            </li>
+                            <li class="panel-item">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio3">Nature</label>
+                                </div>
+                            </li>
+                            <li class="panel-item">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio4" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio4">Centrale</label>
+                                </div>
+                            </li>
+                            <li class="panel-item">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio5" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio5">Lecteur</label>
+                                </div>
+                            </li>
+                            <li class="panel-item">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio6" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio6">Identifiant</label>
+                                </div>
+                            </li>
+                            <li class="panel-item">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio7" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio7">Nom</label>
+                                </div>
+                            </li>
+                            <li class="panel-item">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio8" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio8">Prenom</label>
                                 </div>
                             </li>
                         </ul>
