--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,10 @@
 <!-- Les script javasript -->
 
 <script src="assets/js/jquery.dataTables.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
 
-
+<script src="assets/js/scriptAlphabetTable.js"></script>
 
 <script>
 
@@ -12,15 +14,21 @@ $(document).ready(function() {
     paging: false,
     searching: false
 });
+
+$('#table-dyn').DataTable({
+    paging: false,
+    searching: false,
+
+});
 } );
 
 
 //$('.navbar').find(".nav-item")[index_menu].addCladd('active');
 $('.navbar').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
-$('.menu-item').find("a")[index_left_menu].setAttribute('class',"active");
+$('.sidenav').find(".nav-item")[index_menu-1].setAttribute('class',"nav-item active");
 
-var titres = ["Flux d'actualité","Synoptique","Groupes & Utilisateurs","planniification","paramètres"];
-document.getElementById('titre').innerText = titres[index_menu - 1];
+var titres = ["Flux d'actualité","Synoptique","Groupes & Utilisateurs","plannification","paramètres"];
+document.getElementById('titre').innerText = titres[index_menu-1];
 //$('.navbar .col-lg-2').find("span")[index_menu].setAttribute('class',"txt-org b");
 
 
