--- a/modal.ficheContact.html
+++ b/modal.ficheContact.html
@@ -3,10 +3,10 @@
 
 
 
-<!-- Format web -->
-<div class="modal fade in" id="modal-default">
-        <div class="modal-dialog">
-          <div class="modal-content">
+<link rel="stylesheet" href="assets/css/style-modal-requette.css">
+<div class="modal animated fadeInDown" id="modal-default">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
               <!-- Debut Conteneur des boutons -->
               <div class="row head-no-border">
                   <div class="col-lg-8 col-sm-6">
@@ -94,7 +94,7 @@
                     <table class="table table-hover">
                         <thead>
                             <th>
-                               <div class="txt-gray-2"><span> AUTORISATIONS</span></div>
+                                <div class="txt-gray-2"><span> AUTORISATIONS</span></div>
                             </th>
                         </thead>
                         <tbody>
@@ -124,10 +124,7 @@
                 <button type="button" data-dismiss="modal" class="btn btn-outline-primary"><span aria-hidden="true">Close</span></button>
             </div>
         </div>
-          <!-- /.modal-content -->
-
-        </div>
-        <!-- /.modal-dialog -->
+    </div>
 </div>
         
 
